--- a/custom/ewsghana/templates/ewsghana/multi_report.html
+++ b/custom/ewsghana/templates/ewsghana/multi_report.html
@@ -64,12 +64,14 @@
                 </div>
                 <h4 class="media-heading">{{ thisreport.report_table.title }}<br/><small>{{ subtitle1 }}</small><br/><small>{{ subtitle2 }}</small></h4>
                 {% if thisreport.report_table.slug == 'inventory_management' %}
-                    <form>
-                        <div style="display: inline-block">
-                            <input type="text" id="inventory_filter" class="date-range-picker" value="{{ datespan.startdate|date:'Y-m-d' }} to {{ datespan.enddate|date:'Y-m-d' }}" />
-                            <button style="margin-bottom: 9px;" id="inventory_filter_btn" class="filters btn">Apply</button>
-                        </div>
-                    </form>
+                    <div class="row" style="margin: 0 !important">
+                        <form>
+                            <div style="display: inline-block">
+                                <input type="text" id="inventory_filter" class="date-range-picker" value="{{ datespan.startdate|date:'Y-m-d' }} to {{ datespan.enddate|date:'Y-m-d' }}" />
+                                <button style="margin-bottom: 9px;" id="inventory_filter_btn" class="filters btn">Apply</button>
+                            </div>
+                        </form>
+                    </div>
                 {% endif %}
                 {% include 'ewsghana/partials/report_table.html' with report_table=thisreport.report_table charts=thisreport.charts chart_span=thisreport.chart_span show_table=thisreport.show_table%}
                 <br/>
@@ -124,8 +126,6 @@
                     addCheckboxes();
                     $('#inventory_filter_btn').removeAttr('disabled');
                     $('.hq-loading').fadeOut();
-
-
                 },
                 error: function() {
                 }
