--- a/corehq/apps/hqadmin/templates/hqadmin/system_info.html
+++ b/corehq/apps/hqadmin/templates/hqadmin/system_info.html
@@ -140,15 +140,50 @@
         {% endif %}
         var pillowtopViewModel = new RefreshableViewModel("{% url "system_ajax" %}?api=pillowtop", PillowModel, 'name');
         var dbComparisonsViewModel = new RefreshableViewModel("{% url "db_comparisons" %}", DbComparisons, 'description');
+
+        var AutoRefreshModel = function () {
+            var self = this;
+            self.refreshStatus = ko.observable(false);
+            self.refreshStatusText = ko.observable('off');
+            self.models = [];
+            self.timers = [];
+
+            self.addModel = function (model, refreshInterval) {
+                self.models.push({
+                    'model': model,
+                    'interval': refreshInterval
+                });
+            };
+
+            self.toggleRefresh = function () {
+                self.refreshStatus(!self.refreshStatus());
+                self.refreshStatusText(self.refreshStatus() ? 'on' : 'off');
+                var model, timer;
+                if (self.refreshStatus()) {
+                    $.each(self.models, function (index, model) {
+                        self.timers.push(setInterval(function () { model.model.refresh(); }, model.interval));
+                    });
+                } else {
+                    while(self.timers.length > 0) {
+                        clearInterval(self.timers.pop());
+                    }
+                }
+            };
+        };
+
+        var autoRefresh = new AutoRefreshModel();
         $(function () {
             ko.applyBindings(celeryViewModel, $("#celeryblock").get(0));
             ko.applyBindings(couchViewModel, $("#couchblock").get(0));
             ko.applyBindings(pillowtopViewModel, $('#pillowtop-status').get(0));
             ko.applyBindings(dbComparisonsViewModel, $('#elastic-vs-couch').get(0));
-            setInterval(function () { celeryViewModel.refresh(); }, {{ celery_update }});
-            setInterval(function () { couchViewModel.refresh(); }, {{ couch_update }});
-            setInterval(function () { pillowtopViewModel.refresh(); }, {{ couch_update }});
-            setInterval(function () { dbComparisonsViewModel.refresh(); }, {{ db_update }});
+            autoRefresh.addModel(celeryViewModel, {{ celery_update }});
+            autoRefresh.addModel(couchViewModel, {{ couch_update }});
+            autoRefresh.addModel(pillowtopViewModel, {{ couch_update }});
+            autoRefresh.addModel(dbComparisonsViewModel, {{ db_update }});
+
+            autoRefresh.toggleRefresh();
+            ko.applyBindings(autoRefresh, $('#autorefresh').get(0));
         });
 
         $(document).on("click", ".reset_pillow_checkpoint_btn", function () {
@@ -186,6 +221,11 @@
                 <td>
                     <ul>
                         <li><a href="{% url 'view_recent_changes' %}">Recent couch changes</a></li>
+                        <li>
+                            <div id="autorefresh">
+                                Auto refresh <a href="#" data-bind="click: toggleRefresh, text: refreshStatusText"></a></span>
+                            </div>
+                        </li>
                     </ul>
                 </td>
                 <td><strong>{{ current_system }}</strong></td>
