--- a/corehq/apps/app_manager/templates/app_manager/partials/form_workflow.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/form_workflow.html
@@ -9,7 +9,7 @@
                   Here you can set the application to navigate automatically to a different location in the app.{% endblocktrans %}"
             ></span>
         </label>
-        <div id="form-workflow" class="controls">
+        <div id="form-workflow" class="controls commcare-feature" data-since-version="2.10">
             {% if edit %}
                  <select name="post_form_workflow" data-bind="
                     optstr: form_workflow_options,
