Facility Page Report feedback

--- a/custom/ewsghana/templates/ewsghana/multi_report.html
+++ b/custom/ewsghana/templates/ewsghana/multi_report.html
@@ -89,4 +89,23 @@
             {% endwith %}
         {% endfor %}
     {% endfor %}
+
+    <script>
+        function updateExportButton() {
+            var button = $("#export-report-excel");
+            if ({{ split|yesno:"true,false" }}) {
+                button.text("Export Chart to Excel");
+                button.css('display', 'inline-block');
+            } else if ({{ exportable|yesno:"true,false" }}){
+                button.text("Export to Excel");
+                button.css('display', 'inline-block');
+            } else {
+                button.css('display', 'None');
+            }
+        }
+        $("#apply-filters").on('click', function(){
+            updateExportButton();
+        });
+        updateExportButton()
+    </script>
 {% endblock %}
