--- a/corehq/apps/data_interfaces/templates/data_interfaces/archive_email.html
+++ b/corehq/apps/data_interfaces/templates/data_interfaces/archive_email.html
@@ -1,15 +1,18 @@
-<h1>Archived Forms</h1>
+{% load i18n %}
+<h1>{% trans "Archived Forms" %}</h1>
 <p>
-    The following lists the formst that were successfully archived and those that failed to be archived
+    {% blocktrans %}
+    The following lists the forms that were successfully archived and those that failed to be archived.
+    {% endblocktrans %}
 </p>
-<h3>Successes</h3>
+<h3>{% trans "Successes" %}</h3>
 <ul>
 {% for msg in success %}
     <li>{{ msg }}</li>
 {% endfor %}
 </ul>
 
-<h3>Errors</h3>
+<h3>{% trans "Errors" %}</h3>
 <ul>
 {% for msg in errors %}
     <li>{{ msg }}</li>
