new build update policy

--- a/corehq/apps/builds/templates/builds/edit_menu.html
+++ b/corehq/apps/builds/templates/builds/edit_menu.html
@@ -79,8 +79,8 @@
             <li><a href="http://jenkins.dimagi.com/view/CommCare%20Mobile/" target="_blank">Browse builds</a></li>
             <li>Click on a CommCare version (example: "commcare-mobile-2.13", <strong>NOT</strong> "commcare-odk-2.13")</li>
             <li>Click on the most recent successful build in the table at left</li>
-            <li>Click "Build Artifacts"</li>
-            <li>Right-click on "(all files in zip) and select "Copy Link Address"</li>
+            <li>Click "Build Artifacts" -> "application" -> "posttmp"</li>
+            <li>Right-click on "artifacts.zip" and select "Copy Link Address"</li>
             <li>Paste the address into the box below</li>
             <li>Click Submit</li>
             <li>Wait until the page loads. If successful click back and refresh to see your new build.</li>
