(FB: 155149) - Fix small type
Mobile Users to Mobile Workers

http://manage.dimagi.com/default.asp?155149

--- a/corehq/apps/users/templates/users/mobile/users_list.html
+++ b/corehq/apps/users/templates/users/mobile/users_list.html
@@ -170,7 +170,9 @@
         </div>
         <p class="help-block">
             <i class="icon icon-info-sign"></i>
-            Search any text, or use a targeted query. For more info see the <a href='https://wiki.commcarehq.org/display/commcarepublic/Create+and+Manage+CommCare+Mobile+Workers#CreateandManageCommCareMobileWorkers-C.SearchforMobileWorkers' target='_blank'>Mobile Users</a> help page
+            Search any text, or use a targeted query. For more info see the <a
+                href='https://wiki.commcarehq.org/display/commcarepublic/Create+and+Manage+CommCare+Mobile+Workers#CreateandManageCommCareMobileWorkers-C.SearchforMobileWorkers'
+            target='_blank'>Mobile Workers</a> help page
         </p>
     </form>
     {% endif %}
