--- a/corehq/apps/users/templates/users/mobile/users_list.html
+++ b/corehq/apps/users/templates/users/mobile/users_list.html
@@ -170,9 +170,11 @@
         </div>
         <p class="help-block">
             <i class="icon icon-info-sign"></i>
+            {% blocktrans %}
             Search any text, or use a targeted query. For more info see the <a
                 href='https://wiki.commcarehq.org/display/commcarepublic/Create+and+Manage+CommCare+Mobile+Workers#CreateandManageCommCareMobileWorkers-C.SearchforMobileWorkers'
                 target='_blank'>Mobile Workers</a> help page
+            {% endblocktrans %}
         </p>
     </form>
     {% endif %}
