--- a/corehq/apps/hqwebapp/templates/hqwebapp/partials/form_list_form.html
+++ b/corehq/apps/hqwebapp/templates/hqwebapp/partials/form_list_form.html
@@ -9,6 +9,11 @@
       class="form form-horizontal">
     {% csrf_token %}
 <fieldset>
+    {% if errors %}
+        <div class="alert alert-block alert-error">
+            {% trans "Form has errors" %}
+        </div>
+    {% endif %}
     <table class="table table-striped table-bordered">
 
         <thead>
@@ -23,14 +28,20 @@
             <tr>
                 {% for spec in row_spec %}
                 <td>
-                    {% if spec.type == "RAW" %}
-                        <span data-bind="text: data.{{ spec.key }}"></span>
-                    {% elif spec.type == "TextInput" %}
-                    <input name="{{ spec.key }}"
-                        data-bind="value: data.{{ spec.key }}">
-                    {% else %}
-                        <span class="error">{{ spec.type }} NOT FOUND</span>
-                    {% endif %}
+                    <div class="control-group"
+                         data-bind="css: { error: errors.{{ spec.key }} }">
+                        {% if spec.type == "RAW" %}
+                            <span data-bind="text: data.{{ spec.key }}"></span>
+                        {% elif spec.type == "TextInput" %}
+                        <input name="{{ spec.key }}"
+                               data-bind="value: data.{{ spec.key }}">
+                        {% else %}
+                            <span class="error">{{ spec.type }} NOT FOUND</span>
+                        {% endif %}
+                        <span class="help-block"
+                              data-bind="text: errors.{{ spec.key }},
+                                         visible: errors.{{ spec.key}}"></span>
+                    </div>
                 </td>
                 {% endfor %}
             </tr>
@@ -50,6 +61,12 @@
 $(document).ready(function() {
     function Row(data, keys) {
         var self = this;
+
+        if ('form_errors' in data) {
+            self.errors = data.form_errors;
+        } else {
+            self.errors = {};
+        }
 
         self.data = {};
         keys.forEach(function(key) {
@@ -74,7 +91,6 @@ $(document).ready(function() {
                 self.keys.forEach(function(key) {
                     serialized_row[key] = row.data[key]();
                 });
-                console.log(serialized_row);
                 return serialized_row;
             });
         };
