--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
@@ -44,7 +44,7 @@
                         <span class="help-inline" data-bind="
                             text: DetailScreenConfig.field_format_warning_message
                         ">
-                        <span/>
+                        </span>
                     </div>
                 </td>
 
