--- a/corehq/apps/reports/templates/reports/partials/hqexport_group_table.html
+++ b/corehq/apps/reports/templates/reports/partials/hqexport_group_table.html
@@ -15,7 +15,16 @@
     {% for component in exports %}
         <tr class="{% cycle "odd" "even" %}">
             <td>{{ component.config.name }} {{ component.config.get_id }}</td>
-            <td>{% if component.saved_version.has_file %}{{ component.saved_version.last_updated|naturaltime }}{% else %}{% trans "N/A" %}{% endif %}</td>
+            <td>{% if component.saved_version.has_file %}
+                {{ component.saved_version.last_updated|naturaltime }}
+                {% if not component.saved_version.last_accessed or component.saved_version.last_accessed < group_export_cutoff %}
+                    <p class="muted">
+                        <i class="icon-warning-sign"></i>
+                        <small>{% trans "This export has not been updated since it has not been used recently. To update click 'Update Data' button." %}</small>
+                    </p>
+                {% endif %}
+                {% else %}{% trans "N/A" %}{% endif %}
+            </td>
             <td>{% if component.saved_version.has_file %}{{ component.saved_version.size|filesizeformat }}{% else %}{% trans "N/A" %}{% endif %}</td>
             <td>
                 {% if component.saved_version.has_file %}
