--- a/corehq/apps/userreports/templates/userreports/partials/report_builder_configure_chart.html
+++ b/corehq/apps/userreports/templates/userreports/partials/report_builder_configure_chart.html
@@ -45,7 +45,7 @@
             var that = this;
 
             this.formatOptions = ko.observableArray(["Choice", "Date", "Numeric"]);
-            this.propertyOptions = ko.observableArray({{ case_properties|JSON }});
+            this.propertyOptions = ko.observableArray({{ property_options|JSON }});
             this.columns = ko.observableArray([new PropertyListItem()]);
             this.serializedProperties = ko.computed(function(){
                 return JSON.stringify(
