Give generic names to case tile buckets

--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
@@ -60,11 +60,11 @@
                 <td>
                     <select data-bind="value: case_tile_field">
                         <option value=""></option>
-                        <option value="child_name">child_name</option>
-                        <option value="village">village</option>
-                        <option value="mother_name">mother_name</option>
-                        <option value="sex">sex</option>
-                        <option value="dob">dob</option>
+                        <option value="header">header</option>
+                        <option value="top_left">top_left</option>
+                        <option value="bottom_left">bottom_left</option>
+                        <option value="top_right">top_right</option>
+                        <option value="bottom_right">bottom_right</option>
                     </select>
                 </td>
                 <!-- /ko -->
