--- a/corehq/apps/locations/templates/locations/manage/locations.html
+++ b/corehq/apps/locations/templates/locations/manage/locations.html
@@ -82,13 +82,11 @@ $(function() {
             <h2>{% trans "Manage Locations" %}</h2>
             <p>
                 {% blocktrans %}
-                  Location Types allow you to configure the different types
-                  of locations within your project (districts, facilities,
-                  front line workers, etc.). Locations can own data and
-                  cases, view child location's data or simply be used for
-                  aggregation. Once you've defined your location types,
-                  you'll be able to add locations for your project.
-                  Learn more about locations on our <a href="https://confluence.dimagi.com/display/commtrack/Location+Types">Help Site</a>.
+                    Locations allow you to represent the real-world hierarchy
+                    of locations (districts, facilities, frontline workers,
+                    etc.) of your project. Once this hierarchy has been
+                    defined, you can use it for reporting and case sharing.
+                    Learn more about locations on our <a href="https://confluence.dimagi.com/display/commtrack/Locations">Help Site</a>.
                 {% endblocktrans %}
             </p>
             {% if show_inactive %}
@@ -118,6 +116,9 @@ $(function() {
             <a class="btn btn-info" href="{% url "location_import" domain %}">
                 <i class="icon-upload"></i> {% trans 'Bulk Import Locations' %}
             </a>
+            <a class="btn" href="{% url "location_settings" domain %}">
+                {% trans "Edit Location Types" %}
+            </a>
             <a class="btn" href="{% url "location_fields_view" domain %}">
                 {% trans "Edit Location Fields" %}
             </a>
@@ -126,76 +127,86 @@ $(function() {
 </div>
 {% endif %}
 
-<script type="text/html" id="location-template">
+<hr />
 
-    <div class="loc_section">
-        <!-- header bar -->
-        <div class="loc_header" data-bind="if: name() != '_root'">
-            <span data-bind="visible: show_archive_action_button">
-                {% if show_inactive %}
-                <a class="loc_edit btn btn-primary"
-                    data-bind="click: function(data, event) { unarchive_loc(event.currentTarget, uuid()) }">
-                    {% trans "Unarchive" %}
-                </a>
-                {% else %}
-                <a class="loc_edit btn btn-primary"
-                    data-bind="click: function(data, event) { archive_loc(event.currentTarget, name(), uuid()) }">
-                    {% trans "Archive" %}
+{% if has_location_types %}
+    <script type="text/html" id="location-template">
+
+        <div class="loc_section">
+            <!-- header bar -->
+            <div class="loc_header" data-bind="if: name() != '_root'">
+                <span data-bind="visible: show_archive_action_button">
+                    {% if show_inactive %}
+                    <a class="loc_edit btn btn-inverse"
+                        data-bind="click: function(data, event) { unarchive_loc(event.currentTarget, uuid()) }">
+                        {% trans "Unarchive" %}
+                    </a>
+                    {% else %}
+                    <a class="loc_edit btn btn-inverse"
+                        data-bind="click: function(data, event) { archive_loc(event.currentTarget, name(), uuid()) }">
+                        {% trans "Archive" %}
+                    </a>
+                    {% endif %}
+                </span>
+
+                {% if not show_inactive %}
+                <a class="loc_edit btn btn-primary" data-bind="attr: { href: loc_edit_url(uuid()) }">
+                    Edit
                 </a>
                 {% endif %}
-            </span>
 
-            {% if not show_inactive %}
-            <a class="loc_edit btn btn-primary" data-bind="attr: { href: loc_edit_url(uuid()) }">
-                Edit
-            </a>
-            {% endif %}
-
-            <!-- want to make entire row clickable, but overrides click on 'edit' button -->
-            <span data-bind="click: toggle, style: { cursor: (can_have_children() ? 'pointer' : 'default') }">
-                <span data-bind="if: can_have_children">
-                    <a class="label">
-                        <i data-bind="css: { 'icon-plus': !expanded(), 'icon-minus': expanded() }"></i>
-                    </a>
+                <!-- want to make entire row clickable, but overrides click on 'edit' button -->
+                <span data-bind="click: toggle, style: { cursor: (can_have_children() ? 'pointer' : 'default') }">
+                    <span data-bind="if: can_have_children">
+                        <a class="label">
+                            <i data-bind="css: { 'icon-plus': !expanded(), 'icon-minus': expanded() }"></i>
+                        </a>
+                    </span>
+                    <span class="loc_name" data-bind="text: name"></span>
+                    <span class="loc_type">(<span data-bind="text: type"></span>)</span>
                 </span>
-                <span class="loc_name" data-bind="text: name"></span>
-                <span class="loc_type">(<span data-bind="text: type"></span>)</span>
-            </span>
-            <div style="clear: both;"></div>
-        </div>
-
-        <!-- child content -->
-        <div class="loc_children" data-bind="visible: expanded, style: { borderColor: 'rgba(0, 0, 255, ' + Math.min(.08 * depth, .5) + ')' }">
-
-            <!-- ajax spinner -->
-            <div class="loc_section loc_child" data-bind="visible: children_status() == 'loading'">
-                <img src="{% static 'hqwebapp/img/ajax-loader.gif' %}" alt="loading indicator" /> Loading&hellip;
+                <div style="clear: both;"></div>
             </div>
 
-            <!-- ajax content -->
-            <div data-bind="fadeVisible: children_status() == 'loaded'">
+            <!-- child content -->
+            <div class="loc_children" data-bind="visible: expanded, style: { borderColor: 'rgba(0, 0, 255, ' + Math.min(.08 * depth, .5) + ')' }">
 
-                <!-- child entries -->
-                <div data-bind="foreach: children">
-                    <div class="loc_child" data-bind="template: { name: 'location-template' }"></div>
+                <!-- ajax spinner -->
+                <div class="loc_section loc_child" data-bind="visible: children_status() == 'loading'">
+                    <img src="{% static 'hqwebapp/img/ajax-loader.gif' %}" alt="loading indicator" /> Loading&hellip;
                 </div>
 
-                <!-- 'no children' message -->
-                <div class="loc_child no_children" data-bind="visible: children().length == 0, text: no_children_caption"></div>
+                <!-- ajax content -->
+                <div data-bind="fadeVisible: children_status() == 'loaded'">
+
+                    <!-- child entries -->
+                    <div data-bind="foreach: children">
+                        <div class="loc_child" data-bind="template: { name: 'location-template' }"></div>
+                    </div>
+
+                    <!-- 'no children' message -->
+                    <div class="loc_child no_children alert alert-info" data-bind="visible: children().length == 0, text: no_children_caption"></div>
+
+                </div>
+
+                {% if not show_inactive %}
+                    <!-- create child button -->
+                    <a class="btn btn-success loc_child" data-bind="attr: { href: NEW_LOC_URL + '?parent=' + (uuid() || '') }">
+                        <i class="icon icon-white icon-plus"></i> <span data-bind="text: new_child_caption"></span>
+                    </a>
+                {% endif %}
 
             </div>
-
-            {% if not show_inactive %}
-                <!-- create child button -->
-                <a class="btn btn-success loc_child" data-bind="attr: { href: NEW_LOC_URL + '?parent=' + (uuid() || '') }">
-                    <i class="icon icon-white icon-plus"></i> <span data-bind="text: new_child_caption"></span>
-                </a>
-            {% endif %}
-
         </div>
-    </div>
 
-</script>
+    </script>
+{% else %}
+  <div class="loc_child no_children alert alert-info">
+    Please define the location types
+    <a href="{% url "location_settings" domain %}">here</a>
+    for your project before creating any locations
+  </div>
+{% endif %}
 
 <div id="location_tree">
   <div data-bind="template: { name: 'location-template', if: root, data: root }"></div>
