--- a/corehq/apps/locations/templates/locations/settings.html
+++ b/corehq/apps/locations/templates/locations/settings.html
@@ -36,12 +36,27 @@
 {% endblock %}
 
 {% block main_column %}
+    <div class="span8">
+        <h2>{% trans "Location Hierarchy" %}</h2>
+        <p>
+            {% blocktrans %}
+                Location Types allow you to configure the different types
+                of locations within your project (districts, facilities,
+                front line workers, etc.). Locations can own data and
+                cases, view child location's data or simply be used for
+                aggregation. Once you've defined your location types,
+                you'll be able to add locations for your project.
+                Learn more about locations on our <a href="https://confluence.dimagi.com/display/commtrack/Locations">Help Site</a>.
+            {% endblocktrans %}
+        </p>
+    </div>
     <form id="settings" class="form form-horizontal" method="post">
         <fieldset>
-            <legend>{% trans "Location Hierarchy" %}</legend>
             <div class="control-group">
-                <label class="control-label">{% trans 'Edit Locations' %}</label>
-                <div class="controls">
+                    <button type="button" class="btn btn-success" data-bind="click: new_loctype">
+                        <i class="icon-plus"></i> {% trans "New Location Type" %}
+                    </button>
+                    <hr />
                    <div class="text-error" data-bind="text: loc_types_error"></div>
                     <table class="table table-striped table-bordered">
                         <thead>
@@ -91,18 +106,12 @@
                             </tr>
                         </tbody>
                     </table>
-                    <button type="button" class="btn" data-bind="click: new_loctype">
-                        <i class="icon-plus"></i> {% trans "New Location Type" %}
-                    </button>
-                </div>
             </div>
         </fieldset>
 
-        <div class="form-actions">
             <button type="submit" class="btn btn-primary">
                 {% trans "Save Location Hierarchy" %}
             </button>
-        </div>
         <input name="json" type="hidden" data-bind="value: json_payload" />
     </form>
 
