Rename some of the tile fields again

--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
@@ -63,8 +63,8 @@
                         <option value="header">header</option>
                         <option value="top_left">top_left</option>
                         <option value="bottom_left">bottom_left</option>
-                        <option value="top_right">top_right</option>
-                        <option value="bottom_right">bottom_right</option>
+                        <option value="sex">sex</option>
+                        <option value="date">date</option>
                     </select>
                 </td>
                 <!-- /ko -->
