Add little line seperation on location hierarchy

--- a/corehq/apps/locations/templates/locations/manage/locations.html
+++ b/corehq/apps/locations/templates/locations/manage/locations.html
@@ -166,6 +166,7 @@ $(function() {
                     <span class="loc_type">(<span data-bind="text: type"></span>)</span>
                 </span>
                 <div style="clear: both;"></div>
+                <hr style="margin: 0px;"/>
             </div>
 
             <!-- child content -->
