--- a/corehq/apps/locations/templates/locations/manage/locations.html
+++ b/corehq/apps/locations/templates/locations/manage/locations.html
@@ -135,25 +135,25 @@ $(function() {
         <div class="loc_section">
             <!-- header bar -->
             <div class="loc_header" data-bind="if: name() != '_root'">
-                <span data-bind="visible: show_archive_action_button">
-                    {% if show_inactive %}
-                    <a class="loc_edit btn btn-inverse"
-                        data-bind="click: function(data, event) { unarchive_loc(event.currentTarget, uuid()) }">
-                        {% trans "Unarchive" %}
-                    </a>
-                    {% else %}
-                    <a class="loc_edit btn btn-inverse"
-                        data-bind="click: function(data, event) { archive_loc(event.currentTarget, name(), uuid()) }">
-                        {% trans "Archive" %}
-                    </a>
+                <div class="btn-group" style="float:right;">
+                    {% if not show_inactive %}
+                        <a class="btn btn-primary" data-bind="attr: { href: loc_edit_url(uuid()) }">
+                            Edit
+                        </a>
                     {% endif %}
-                </span>
 
-                {% if not show_inactive %}
-                <a class="loc_edit btn btn-primary" data-bind="attr: { href: loc_edit_url(uuid()) }">
-                    Edit
-                </a>
-                {% endif %}
+                    {% if show_inactive %}
+                        <a class="btn btn-inverse"
+                            data-bind="click: function(data, event) { unarchive_loc(event.currentTarget, uuid()) }, visible: show_archive_action_button">
+                            {% trans "Unarchive" %}
+                        </a>
+                    {% else %}
+                        <a class="btn btn-inverse"
+                            data-bind="click: function(data, event) { archive_loc(event.currentTarget, name(), uuid()) }, visible: show_archive_action_button">
+                            {% trans "Archive" %}
+                        </a>
+                    {% endif %}
+                </div>
 
                 <!-- want to make entire row clickable, but overrides click on 'edit' button -->
                 <span data-bind="click: toggle, style: { cursor: (can_have_children() ? 'pointer' : 'default') }">
